# utils-rs

./: .gitignore  Cargo.toml  README.md  clippy.toml  cog.toml  justfile  rustfmt.toml
.github/workflows/: ci.yaml
crates/alloc/: Cargo.toml
crates/alloc/src/: lib.rs  profiler.rs  stats.rs
crates/analytics/: Cargo.toml
crates/analytics/src/: collectors.rs  exporters.rs  lib.rs  serializers.rs  tests.rs  time.rs
crates/analytics/src/collectors/: batch.rs  mod.rs  noop.rs  traits.rs
crates/analytics/src/exporters/: aws.rs
crates/analytics/src/serializers/: parquet.rs
crates/analytics/src/serializers/parquet/: native.rs  serde.rs
crates/analytics/src/writers/: parquet.rs
crates/analytics/tests/: integration.rs
crates/collections/: Cargo.toml
crates/collections/src/: lib.rs
crates/future/: Cargo.toml
crates/future/src/: lib.rs
crates/future_metrics/: Cargo.toml
crates/future_metrics/src/: lib.rs
crates/geoblock/: Cargo.toml
crates/geoblock/src/: errors.rs  lib.rs  tests.rs
crates/geoip/: Cargo.toml
crates/geoip/src/: block.rs  lib.rs  local.rs  maxmind.rs  resolver.rs
crates/geoip/src/block/: middleware.rs
crates/geoip/src/block/middleware/: tests.rs
crates/geoip/src/resolver/: local.rs  maxmind.rs
crates/http/: Cargo.toml
crates/http/src/: executor.rs  lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: custom_aggregation_selector.rs  future.rs  label.rs  lazy.rs  lib.rs  macros.rs  registry.rs  task.rs  test.rs
crates/metrics/src/examples/: macros_counter.rs  macros_future_metrics.rs  macros_gauge.rs  macros_histogram.rs  mod.rs
crates/project_registry/: Cargo.toml
crates/project_registry/src/: lib.rs
crates/project_registry/src/project/: error.rs  mod.rs
crates/project_registry/src/project/types/: origin.rs  project_data.rs
crates/project_registry/src/registry/: client.rs  mod.rs
crates/projectid/: Cargo.toml
crates/projectid/src/project/types/: mod.rs
crates/projectid/src/registry/: error.rs
crates/rate_limit/: Cargo.toml  docker-compose.yml
crates/rate_limit/src/: lib.rs  token_bucket.lua
crates/utils/: Cargo.toml
crates/utils/src/: futures.rs  lib.rs  metrics.rs
crates/utils/src/metrics/: macros.rs  task.rs
crates/websocket/: Cargo.toml
crates/websocket/src/: backend.rs  lib.rs  transport.rs  wrapper.rs
crates/websocket/src/adapters/: axum.rs  tungstenite.rs  warp.rs
crates/websocket/src/backend/: axum.rs  tungstenite.rs  warp.rs
crates/websocket/tests/: integration.rs
examples/: alloc_profiler.rs  alloc_stats.rs  geoblock.rs  metrics.rs
src/: lib.rs
