# Root Crate
[package]
name = "wc"
version = "0.1.0"
edition = "2021"
authors = ["WalletConnect Team"]
license = "MIT"

[workspace]
members = [
    "crates/*",
]

[features]
default = []
full = [
  "alloc",
  "analytics",
  "profiler",
  "collections",
  "future",
  "geoblock",
  "geoip",
  "http",
  "metrics",
  "rate_limit",
]
alloc = ["dep:alloc"]
analytics = ["dep:analytics"]
collections = ["dep:collections"]
future = ["dep:future"]
geoblock = ["geoip/middleware"]
geoip = ["dep:geoip"]
http = []
metrics = ["dep:metrics", "future/metrics", "alloc/metrics", "http/metrics"]
profiler = ["alloc/profiler"]
rate_limit = ["dep:rate_limit"]

[workspace.dependencies]
aws-sdk-s3 = "1.21.0"

[dependencies]
alloc = { path = "./crates/alloc", optional = true }
analytics = { path = "./crates/analytics", optional = true }
collections = { path = "./crates/collections", optional = true }
future = { path = "./crates/future", optional = true }
geoip = { path = "./crates/geoip", optional = true }
http = { path = "./crates/http", optional = true }
metrics = { path = "./crates/metrics", optional = true }
rate_limit = { path = "./crates/rate_limit", optional = true }

[dev-dependencies]
anyhow = "1"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.2.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "filter"] }
axum = "0.7.5"

[[example]]
name = "alloc_profiler"
required-features = ["alloc", "profiler"]

[[example]]
name = "alloc_stats"
required-features = ["alloc", "metrics"]

[[example]]
name = "metrics"
required-features = ["metrics", "future"]

[[example]]
name = "geoblock"
required-features = ["geoblock"]
