# Root Crate
[package]
name = "wc"
version = "0.1.0"
edition = "2021"
authors = ["WalletConnect Team"]
license = "MIT"

[workspace]
members = [
    "crates/*",
]

[features]
default = ["full"]
full = [
  "alloc",
  "analytics",
  "profiler",
  "collections",
  "future",
  "geoblock",
  "geoip",
  "metrics",
  "rate_limit",
  "websocket"
]
alloc = ["dep:alloc"]
analytics = ["dep:analytics"]
collections = ["dep:collections"]
future = ["dep:future"]
geoblock = ["geoip/middleware"]
geoip = ["dep:geoip"]
metrics = ["dep:metrics", "alloc/metrics"]
metrics_exporter_prometheus = ["metrics/exporter_prometheus"]
alloc_metrics = ["alloc/metrics"]
profiler = ["alloc/profiler"]
rate_limit = ["dep:rate_limit"]
websocket = ["dep:websocket"]

[workspace.dependencies]
aws-sdk-s3 = "1.21.0"

[dependencies]
alloc = { path = "./crates/alloc", optional = true }
analytics = { path = "./crates/analytics", optional = true }
collections = { path = "./crates/collections", optional = true }
future = { path = "./crates/future", optional = true }
geoip = { path = "./crates/geoip", optional = true }
metrics = { package = "wc_metrics", path = "./crates/metrics", optional = true }
rate_limit = { path = "./crates/rate_limit", optional = true }
websocket = { path = "./crates/websocket", optional = true }

[dev-dependencies]
anyhow = "1"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.2.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "filter"] }
axum = "0.7.5"
metrics-exporter-prometheus = { version = "0.15", default-features = false }

[[example]]
name = "alloc_profiler"
required-features = ["alloc", "profiler"]

[[example]]
name = "alloc_stats"
required-features = ["alloc", "metrics"]

[[example]]
name = "geoblock"
required-features = ["geoblock"]

[patch.crates-io]
arrow = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "e862f32" }
arrow-array = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "e862f32" }
arrow-buffer = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "e862f32" }
arrow-data = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "e862f32" }
arrow-schema = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "e862f32" }
parquet = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "e862f32" }
parquet_derive = { git = "https://github.com/WalletConnect/arrow-rs.git", rev = "e862f32" }
