[package]
name = "alloc"
version = "0.1.0"
edition = "2021"

[features]
default = []
full = ["metrics", "profiler"]
profiler = ["dep:dhat", "dep:tokio"]
metrics = ["dep:metrics"]

[dependencies]
metrics = { path = "../metrics", optional = true }
tikv-jemallocator = { version = "0.5", features = ["stats"] }
tikv-jemalloc-ctl = { version = "0.5", features = ["use_std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dhat = { git = "https://github.com/WalletConnect/dhat-rs.git", rev = "d16853d", optional = true }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "time", "sync", "parking_lot", "macros"], optional = true }
thiserror = { version = "1" }
