[package]
name = "analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
future = { path = "../future" }

async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
tracing = "0.1"

# Misc
thiserror = "1.0"
anyhow = "1"
tap = "1.0"

chrono = { version = "0.4" }
aws-sdk-s3.workspace = true
bytes = "1.11"

# Parquet serialization
arrow = "57.1"
parquet = { version = "57.1", default-features = false, features = ["arrow", "flate2-rust_backened"]  }
parquet_derive = { version = "57.1" }
serde_arrow = { version = "0.13", features = ["arrow-57"] }
serde = { version = "1.0", features = ["derive", "rc"] }
