[package]
name = "analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
future = { path = "../future" }

async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
tracing = "0.1"

# Misc
thiserror = "1.0"
anyhow = "1"
tap = "1.0"

chrono = { version = "0.4" }
aws-sdk-s3.workspace = true
bytes = "1.5"
parquet = { version = "57.1", default-features = false, features = ["flate2-rust_backened"]  }

[dev-dependencies]
parquet_derive = "57.1"
