[package]
name = "geoblock"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
tracing = "0.1"
axum = "0.6"
thiserror = "1.0"
hyper = "0.14"
tower = "0.4"
tower-layer = "0.3"
pin-project = "1"
futures-core = "0.3"
http-body = "0.4"
axum-client-ip = "0.4"
geoip = { git = "https://github.com/WalletConnect/geoip.git", tag = "0.2.0"}

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
