[package]
name = "geoip"
version = "0.1.0"
edition = "2021"

[features]
default = []
full = ["middleware"]
middleware = ["dep:tower", "dep:tower-layer", "dep:axum-client-ip", "dep:http-body", "dep:http"]

[dependencies]
tower = { version = "0.4", optional = true }
tower-layer = { version = "0.3", optional = true }
http-body = { version = "1.0.0", optional = true }
http = { version = "1.0.0", optional = true }
axum-client-ip = { version = "0.5.1", optional = true }
bitflags = "2.4"
tracing = "0.1"
thiserror = "1.0"
futures = "0.3"
bytes = "1.5"
aws-sdk-s3.workspace = true
maxminddb = "0.23"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
