[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

[features]
default = ["future"]
future = ["dep:pin-project"]

[dependencies]
backend = { package = "metrics", version = "0.23" }
smallvec = "1"
parking_lot = "0.12"
enum-ordinalize = "4.3"
arc-swap = "1.7"
pin-project = { version = "1", optional = true }
