[package]
name = "wc_metrics"
version = "0.1.0"
edition = "2021"

[features]
default = ["future"]
future = ["dep:pin-project"]
exporter_prometheus = ["metrics-exporter-prometheus"]

[dependencies]
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false, optional = true }
smallvec = "1"
parking_lot = "0.12"
enum-ordinalize = "4.3"
arc-swap = "1.7"
pin-project = { version = "1", optional = true }
futures = "0.3"

[dev-dependencies]
wc_metrics = { path = "./" }
metrics-exporter-prometheus = "0.17"
prometheus-parse = "0.2"
tikv-jemalloc-ctl = { version = "0.5", features = ["use_std"] }
tikv-jemallocator = "0.5"
smol = "2"
