[package]
name = "projectid"
version = "0.1.0"
edition = "2021"

license = "Apache-2.0"

[dependencies]
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive", "rc"] }

## Misc
once_cell = "1.15"
regex = "1.6"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
