[package]
name = "rate_limit"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
deadpool-redis = "0.22"
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.32", default-features = false, features = ["script", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
once_cell = "1"

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = "1.8"
